shift fixed

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -30,6 +30,7 @@ h1 {
       text-align: center;
         color: #fff;
         text-indent: 30px;
+        line-height: 20px;
     }
     
  #welcome{
