--- a/sass/components/_Column.scss
+++ b/sass/components/_Column.scss
@@ -2,12 +2,10 @@
 .columns{
   display: flex;
   flex-flow: row ;
-  justify-content: space-evenly;
-  margin-top: 5px 0;
+  justify-content: space-between;
   text-align: center;
   width:95%;
   align-items: center;
- 
   margin: 0 auto;
   border-radius: 15px;
      box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2),
@@ -15,7 +13,7 @@
     margin-top: -3rem;
     margin-bottom: 4rem;
     background-color: #f5f5f5;
-    gap: .5rem;
+
   flex-wrap: wrap;
   
  
@@ -33,7 +31,15 @@ letter-spacing: 2px;
 }
 .column h2
 {
-color: #141114;
+color: #141c3a;
+}
+.column  {
+padding: 10px;
+display: flex;
+align-items: center;
+flex-direction: column;
+text-align: start;
+justify-content: flex-start;
 }
 
 
