--- a/sass/components/_Introduction.scss
+++ b/sass/components/_Introduction.scss
@@ -185,10 +185,13 @@ margin-bottom: -5rem;
 }
 .color-secondary{
     color: #141c3a;
+    text-align: center;
+ 
    
    
 }
  .color-primary {
      color: #6e25ef;
+     text-align: center;
 
  }
